fix blurry image

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,9 @@ input[type="reset"] {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+a {
   text-decoration: none;
   color: inherit;
 }
